[build-system]
requires = [
    "setuptools>=71.04",
]

build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Rocky Bernstein",	email = "rb@dustyfeet.com"},
]

name = "control_flow"
description = "Python Bytecode Control Flow Toolkit"
dependencies = [
    "click",
    "xdis >= 6.1.1, < 6.3.0",
    "six >= 1.10.0",
]
readme = "README.rst"
license = {text = "GPL"}
keywords = ["Python bytecode", "bytecode", "disassembler"]
classifiers = [
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rocky/python-control-flow"
Downloads = "https://github.com/rocky/python-control-flow/releases"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.scripts]
python-cfg = "control_flow.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "control_flow.version.__version__"}
