[build-system]
requires = [
    "setuptools",
]

build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Rocky Bernstein",	email = "rb@dustyfeet.com"},
]

name = "python-control-flow"
description = "Python Bytecode Control Flow Toolkit"
dependencies = [
    "click",
    "xdis > 6.2.0",
]
readme = "README.rst"
license = "MIT"
keywords = ["Python bytecode", "bytecode", "disassembler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rocky/python-control-flow"
Downloads = "https://github.com/rocky/python-control-flow/releases"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "isort",
    "pytest",
]

[project.scripts]
python-cfg = "python_control_flow.__main__:main"

[tool.setuptools]
packages = [
    "python_control_flow",
]

[tool.setuptools.dynamic]
version = {attr = "python_control_flow.version.__version__"}

[tool.pyright]
include = ["python_control_flow"]
# exclude = []
ignore = ["dist", "docs", "tmp", ".cache"]
